package rpc;


message AppendEntryResponse {
  required string Id = 1;
  required bool Success = 2;
  required uint32 Term = 3;
  optional int32 LogIndexError = 4;
}
