syntax = "proto3";

package rpc;

message CanVote{
    bool CanVote = 1;
}
