syntax = "proto3";

package rpc;


message VoteRequest {
    uint32 Term = 2;
    string CandidateId = 3;
    int32 LastLogIndex = 4;
    uint32 LastLogTerm = 5;
}
